<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/if_user_no_selected_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose_a_user_to_show_data"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/screen_content_layout"
        app:layout_constraintEnd_toEndOf="@+id/screen_content_layout"
        app:layout_constraintStart_toStartOf="@+id/screen_content_layout"
        app:layout_constraintTop_toTopOf="@+id/screen_content_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/screen_content_layout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_info_title">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centralLine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="1" />

        <TextView
            android:id="@+id/email_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/email_title"
            app:layout_constraintStart_toStartOf="@+id/phone_title"
            app:layout_constraintTop_toBottomOf="@+id/phone_title" />

        <TextView
            android:id="@+id/name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/name_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/user_name_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="12dp"
            android:text="@string/user_name_sample"
            app:layout_constraintBottom_toBottomOf="@+id/name_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/name_title" />

        <Button
            android:id="@+id/user_email_view_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_email_sample"
            app:layout_constraintBottom_toBottomOf="@+id/email_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/email_title" />

        <Button
            android:id="@+id/user_phone_view_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_sample"
            app:layout_constraintBottom_toBottomOf="@+id/phone_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/phone_title" />

        <Button
            android:id="@+id/back_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/back_text_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:id="@+id/close_map_or_web_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/unshow_text_button"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <Button
            android:id="@+id/show_web_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/website_sample"
            app:layout_constraintBottom_toBottomOf="@+id/site_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/site_title" />

        <Button
            android:id="@+id/show_map_button"
            style="@style/Widget.Material3.Button.TextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_address_sample"
            app:layout_constraintBottom_toBottomOf="@+id/address_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/address_title" />

        <TextView
            android:id="@+id/site_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/website_title"
            app:layout_constraintStart_toStartOf="@+id/email_title"
            app:layout_constraintTop_toBottomOf="@+id/email_title" />

        <TextView
            android:id="@+id/address_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/user_address_title"
            app:layout_constraintStart_toStartOf="@+id/site_title"
            app:layout_constraintTop_toBottomOf="@+id/site_title" />

        <TextView
            android:id="@+id/phone_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/phone_title"
            app:layout_constraintStart_toStartOf="@+id/name_title"
            app:layout_constraintTop_toBottomOf="@+id/name_title" />

        <WebView
            android:id="@+id/web_site_view_element"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/back_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/show_web_button" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/map_view_wrapper"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="@+id/web_site_view_element"
            app:layout_constraintEnd_toEndOf="@+id/web_site_view_element"
            app:layout_constraintStart_toStartOf="@+id/web_site_view_element"
            app:layout_constraintTop_toTopOf="@+id/show_map_button">

            <fragment
                android:id="@+id/map_view_element"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/user_info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/user_data_screen_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>